assets/css/style.css
.header_section {
  margin: 16px 24px;
  height: 46px;
  background-color: #052A44;
  display: flex;
  justify-content: space-between;
  text-align: center;
  align-items: center;
  border-radius: 12px;
}
.header_section .logo {
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-size: 20px;
  color: #FFFFFF;
  padding-left: 10px;
}
.header_section .nav_bar ul {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 35px;
}
.header_section .nav_bar li {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-size: 16px;
  color: #FFFFFF;
  padding-left: 10px;
}
.header_section .btns {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  padding-right: 10px;
}
.header_section .btns .Sign p {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-size: 16px;
  color: #FFFFFF;
  padding-left: 10px;
}
.header_section .btns .trial {
  width: 100px;
  height: 24px;
  background-color: white;
  border-radius: 8px;
  display: flex;
  text-align: center;
  justify-content: center;
  align-items: center;
}
.header_section .btns .trial p {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-size: 16px;
  color: black;
  padding-left: 10px;
}
.header_section .burger-bar {
  width: 24px;
  height: 24px;
  display: none;
}

.first_section {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 80px;
  margin: 50px;
}
.first_section .right_side {
  display: flex;
  flex-direction: column;
  gap: 20px;
}
.first_section .right_side .career {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-size: 48px;
  color: #E8DB84;
  padding-left: 10px;
}
.first_section .right_side h1 {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-size: 48px;
  color: black;
  padding-left: 10px;
}
.first_section .right_side p {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-size: 18px;
  color: black;
  padding-left: 10px;
}
.first_section .right_side .btns {
  display: flex;
  gap: 10px;
}
.first_section .right_side .btns .start {
  width: 150px;
  height: 54px;
  border-radius: 8px;
  background-color: #052A44;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}
.first_section .right_side .btns .start p {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-size: 16px;
  color: white;
  padding-right: 10px;
}
.first_section .right_side .btns .more {
  width: 150px;
  height: 54px;
  border-radius: 8px;
  background-color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}
.first_section .right_side .students {
  display: flex;
  align-items: center;
}
.first_section .right_side .students p {
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-size: 13.09px;
  color: black;
  padding-right: 10px;
}
.first_section .left_side img {
  max-width: 588px;
  height: auto;
}

.about_section {
  text-align: center;
  padding: 80px 20px;
}
.about_section h2 {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-size: 42px;
  margin-bottom: 10px;
}
.about_section p.description {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-size: 18px;
  margin-bottom: 50px;
  color: #071210;
}
.about_section .cards {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  gap: 30px;
  flex-wrap: wrap;
}
.about_section .cards .card {
  background-color: #fff;
  border-radius: 12px;
  padding: 30px 20px;
  max-width: 300px;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
  text-align: center;
}
.about_section .cards .card .icon {
  width: 50px;
  height: 50px;
  margin: 0 auto 15px;
  background-color: #052A44;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #fff;
  font-size: 24px;
}
.about_section .cards .card h3 {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-size: 22px;
  margin-bottom: 10px;
}
.about_section .cards .card p {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-size: 16.59px;
  line-height: 1.5;
}
.about_section .learn_more_btn {
  margin-top: 50px;
  width: 150px;
  height: 54px;
  border-radius: 8px;
  background-color: #052A44;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  display: flex;
  justify-content: center;
  margin-left: auto;
  margin-right: auto;
}
.about_section .learn_more_btn p {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-size: 16px;
  margin-bottom: 10px;
  color: #FFFFFF;
}

@media (max-width: 1024px) {
  .header_section .nav_bar, .header_section .btns {
    display: none;
  }
  .header_section .burger-bar {
    display: block;
    padding-right: 20px;
  }
  .first_section {
    flex-direction: column;
  }
  .first_section .right_side {
    justify-content: center;
  }
  .first_section .right_side .btns {
    justify-content: center;
  }
  .first_section .right_side .students {
    justify-content: center;
  }
  .first_section .left_side {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;
  }
  .first_section .left_side img {
    max-width: 100%;
    height: auto;
    margin-right: 190px;
  }
}

/*# sourceMappingURL=style.css.map */

